--- a/Telco_Churn_Analysis.ipynb
+++ b/Telco_Churn_Analysis.ipynb
@@ -31,17 +31,10 @@
         "colab_type": "text"
       },
       "source": [
-        "**Verinin Yüklenmesi**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6ZM3xnrycP-S",
-        "colab_type": "text"
-      },
-      "source": [
-        "Drive hesabının bağlanması"
+        "**Verinin Yüklenmesi**\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -56,6 +49,8 @@
         "outputId": "8a3ea86f-a98b-4293-e4eb-c9239f024fde"
       },
       "source": [
+        "# Drive hesabının bağlanması\n",
+        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')"
       ],
@@ -71,16 +66,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_Ogbme71chqx",
-        "colab_type": "text"
-      },
-      "source": [
-        "Kütüphanelerin çağırılması"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "lmzRWo8qcCFi",
@@ -88,6 +73,7 @@
         "colab": {}
       },
       "source": [
+        "# Kütüphanelerin çağırılması\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n"
@@ -102,7 +88,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Veri dosyasının açılması"
+        "**Veri dosyasının açılması**"
       ]
     },
     {
