--- a/Telco_Churn_Analysis.ipynb
+++ b/Telco_Churn_Analysis.ipynb
@@ -87,8 +87,7 @@
         "import warnings\n",
         "from google.colab import files\n",
         "\n",
-        "warnings.filterwarnings('ignore')\n",
-        "# Daha eklenecek...\n"
+        "warnings.filterwarnings('ignore')\n"
       ],
       "execution_count": 0,
       "outputs": []
