--- a/Telco_Churn_Analysis.ipynb
+++ b/Telco_Churn_Analysis.ipynb
@@ -1071,8 +1071,8 @@
         "sm = SMOTE(random_state=2)\n",
         "X_train_res, y_train_res = sm.fit_sample(X_train, y_train.ravel())\n",
         "\n",
-        "print('After oversampling, train_X şekli: {}'.format(X_train_res.shape))\n",
-        "print('After oversampling, train_y şekli: {} \\n'.format(y_train_res.shape))\n",
+        "print('After oversampling, train_X type: {}'.format(X_train_res.shape))\n",
+        "print('After oversampling, train_y type: {} \\n'.format(y_train_res.shape))\n",
         "\n",
         "print(\"After oversampling, count of '1': {}\".format(sum(y_train_res==1)))\n",
         "print(\"After oversampling, count of '0' : {}\".format(sum(y_train_res==0)))"
